--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🧠 Descubra qual dieta funciona pro seu tipo de corpo (em 1 minuto!)</title>
-  <meta name="description" content="Quiz interativo que identifica o melhor tipo de dieta para o seu perfil. Resultado com recomendações + WhatsApp + pagamento integrado." />
+  <meta name="description" content="Quiz interativo com 15 perguntas que identifica o melhor tipo de dieta para o seu perfil. Resultado com recomendações + WhatsApp + pagamento integrado." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -38,8 +38,8 @@
   <section class="bg-gradient-to-b from-white to-slate-100">
     <div class="container mx-auto px-4 py-12 grid lg:grid-cols-2 gap-10 items-center">
       <div>
-        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra qual dieta realmente funciona pro seu tipo de corpo <span class="whitespace-nowrap">(teste rápido)</span></h1>
-        <p class="mt-4 text-lg text-slate-600">Responda <strong>1 pergunta</strong> para testar o fluxo. Depois voltamos às 15 perguntas completas.</p>
+        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra qual dieta realmente funciona pro seu tipo de corpo <span class="whitespace-nowrap">(em 1 minuto!)</span></h1>
+        <p class="mt-4 text-lg text-slate-600">Responda 15 perguntas rápidas e receba um plano de dieta recomendado para o seu perfil — com dicas e a opção de receber tudo no WhatsApp. Para destravar o plano completo, há uma taxa simbólica de <strong>R$ 9,90</strong>.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
           <a href="#como-funciona" class="rounded-xl px-6 py-3 border border-slate-300 font-semibold hover:bg-white transition">Como funciona</a>
@@ -51,7 +51,7 @@
           <img src="https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=1600&auto=format&fit=crop" alt="Comida saudável" class="w-full h-72 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-bold">Resultado personalizado</h3>
-            <p class="mt-1 text-slate-600">Perfis: Low Carb/Cetogênica, Balanceada/Mediterrânea, Proteica/Hiperproteica ou Jejum Intermitente/Flexível.</p>
+            <p class="mt-1 text-slate-600">Receba a melhor estratégia entre: Low Carb/Cetogênica, Balanceada/Mediterrânea, Proteica/Hiperproteica ou Jejum Intermitente/Flexível.</p>
           </div>
         </div>
       </div>
@@ -65,13 +65,13 @@
       <div class="mt-6 grid md:grid-cols-3 gap-6">
         <div class="p-6 rounded-2xl border border-slate-200 bg-white shadow-soft">
           <p class="text-sm text-slate-500">1 de 3</p>
-          <h3 class="font-bold mt-1">Responda 1 pergunta</h3>
-          <p class="mt-2 text-slate-600">Versão de teste rápida para validar pagamento e WhatsApp.</p>
+          <h3 class="font-bold mt-1">Responda 15 perguntas</h3>
+          <p class="mt-2 text-slate-600">Leva cerca de 1 minuto. Suas respostas indicam seu perfil metabólico e comportamental.</p>
         </div>
         <div class="p-6 rounded-2xl border border-slate-200 bg-white shadow-soft">
           <p class="text-sm text-slate-500">2 de 3</p>
           <h3 class="font-bold mt-1">Veja seu resultado</h3>
-          <p class="mt-2 text-slate-600">Mostramos a dieta recomendada com dicas e cardápio exemplo.</p>
+          <p class="mt-2 text-slate-600">Mostramos a dieta recomendada para o seu tipo de corpo, com dicas e macetes práticos.</p>
         </div>
         <div class="p-6 rounded-2xl border border-slate-200 bg-white shadow-soft">
           <p class="text-sm text-slate-500">3 de 3</p>
@@ -87,7 +87,7 @@
     <div class="container mx-auto px-4">
       <div class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
         <div class="flex items-center justify-between mb-4">
-          <h2 class="text-2xl font-extrabold">Responda à pergunta</h2>
+          <h2 class="text-2xl font-extrabold">Responda às perguntas</h2>
           <div class="w-44">
             <div class="h-2 rounded-full bg-slate-200 overflow-hidden" aria-hidden="true">
               <div id="progress" class="h-2 bg-[var(--brand)] w-0"></div>
@@ -100,7 +100,7 @@
 
         <div class="mt-6 flex items-center justify-between">
           <button id="btnPrev" class="rounded-xl px-4 py-2 border border-slate-300 font-semibold disabled:opacity-40" disabled>Voltar</button>
-          <button id="btnNext" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Ver resultado</button>
+          <button id="btnNext" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Próxima</button>
         </div>
       </div>
     </div>
@@ -162,7 +162,7 @@
     const MP_PUBLIC_KEY = 'APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0'; // sua Public Key
     let MP_PREFERENCE_ID = null; // será preenchido pelo backend
 
-    // Perfis e conteúdos
+    // Perfis e conteúdos (iguais ao original)
     const PROFILES = {
       A: { title: '🥑 Perfil A — Low Carb / Cetogênica', desc: 'Seu corpo tende a responder melhor a baixos carboidratos, priorizando proteínas magras e gorduras boas. Controle açúcar e farinhas refinadas.', tips: ['Priorize ovos, peixes, carnes magras, abacate e azeite','Troque refrigerantes por água com limão','Monitore sódio e ingestão de fibras'], menu: ['Café: omelete com queijo + abacate','Almoço: frango grelhado + salada com azeite','Jantar: salmão + legumes salteados'] },
       B: { title: '🍚 Perfil B — Balanceada / Mediterrânea', desc: 'Seu metabolismo pede equilíbrio entre carboidratos complexos, proteínas e gorduras boas. Foco em alimentos naturais e variedade.', tips: ['Monte pratos coloridos e variados','Prefira grãos integrais e frutas','Inclua azeite e oleaginosas com moderação'], menu: ['Café: iogurte + granola + frutas','Almoço: arroz integral, feijão, filé de peixe e salada','Jantar: sopa de legumes + frango desfiado'] },
@@ -170,7 +170,7 @@
       D: { title: '🕒 Perfil D — Jejum Intermitente / Flexível', desc: 'Você lida bem com janelas de alimentação. Foque em refeições completas e evite exageros nas quebras do jejum.', tips: ['Defina janela (ex.: 16/8) com profissional, se possível','Priorize proteínas e fibras na primeira refeição','Beba água, café sem açúcar e chás no jejum'], menu: ['Primeira refeição: bowl proteico (iogurte grego + nuts)','Segunda: frango + legumes + arroz integral','Terceira (opcional): sopa de legumes + ovos'] }
     };
 
-    // === APENAS 1 PERGUNTA PARA TESTE ===
+    // === 15 PERGUNTAS (original) ===
     const QUESTIONS = [
       { q: 'Qual seu principal objetivo agora?', a: ['Emagrecer rápido','Ganhar massa magra','Manter peso e saúde','Reduzir gordura localizada'] },
       { q: 'Seu nível de energia diário é…', a: ['Sempre cansado','Oscila muito','Constante','Muito alto'] },
@@ -189,6 +189,7 @@
       { q: 'Qual frase te representa?', a: ['Quero resultados rápidos','Prefiro algo sustentável','Quero comer bem e perder peso','Quero performance máxima'] }
     ];
 
+    // Pontuação e estado
     const scores = { A:0, B:0, C:0, D:0 };
     let current = 0;
     const form = document.getElementById('quizForm');
@@ -308,8 +309,7 @@
         .catch(err => {
           console.error('Erro ao criar preferência:', err);
           container.innerHTML = '<p class="text-sm text-red-600">Não foi possível iniciar o pagamento. Verifique o backend /api/mp-preference e o Access Token.</p>';
-        }); })
-        .catch(err=>{ console.error('Erro ao criar preferência:', err); container.innerHTML = '<p class="text-sm text-red-600">Não foi possível iniciar o pagamento. Verifique o backend /api/mp-preference e o Access Token.</p>'; });
+        });
     }
 
     function fecharPopup(){ document.getElementById('popupPagamento').style.display = 'none'; }
