--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
     .shadow-soft { box-shadow: 0 10px 25px rgba(2, 6, 23, 0.08); }
     .choice input:checked + label { border-color: var(--brand); background: #ecfdf5; }
     #popupPagamento { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); backdrop-filter:blur(3px); z-index:1000; }
-    /* Destaque maior nas perguntas */
     fieldset.step legend { font-size: 1.25rem; font-weight: 700; }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900">
-  <!-- Header -->
   <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
@@ -32,11 +30,15 @@
         </div>
         <span class="font-extrabold tracking-tight">Quiz de Dieta</span>
       </div>
+      <nav class="hidden md:flex gap-6 text-sm text-slate-600">
+        <a href="#como-funciona" class="hover:text-slate-900">Como funciona</a>
+        <a href="#quiz" class="hover:text-slate-900">Quiz</a>
+        <a href="#resultado" class="hover:text-slate-900">Resultado</a>
+      </nav>
       <a href="#quiz" class="rounded-xl px-4 py-2 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar</a>
     </div>
   </header>
 
-  <!-- Hero -->
   <section class="bg-gradient-to-b from-white to-slate-100">
     <div class="container mx-auto px-4 py-12 grid lg:grid-cols-2 gap-10 items-center">
       <div>
@@ -60,7 +62,6 @@
     </div>
   </section>
 
-  <!-- How it works -->
   <section id="como-funciona" class="py-10">
     <div class="container mx-auto px-4">
       <h2 class="text-2xl md:text-3xl font-extrabold">Como funciona</h2>
@@ -84,7 +85,6 @@
     </div>
   </section>
 
-  <!-- Quiz -->
   <section id="quiz" class="py-10 bg-white border-t border-b border-slate-200">
     <div class="container mx-auto px-4">
       <div class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
@@ -102,13 +102,11 @@
 
         <div class="mt-6 flex items-center justify-between">
           <button id="btnPrev" class="rounded-xl px-4 py-2 border border-slate-300 font-semibold disabled:opacity-40" disabled>Voltar</button>
-          <!-- Botão Próxima removido por auto-avanço -->
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Result -->
   <section id="resultado" class="py-12 hidden">
     <div class="container mx-auto px-4">
       <div class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
@@ -141,7 +139,6 @@
     </div>
   </section>
 
-  <!-- Popup Pagamento -->
   <div id="popupPagamento" class="flex items-center justify-center">
     <div class="bg-white p-6 rounded-2xl shadow-soft w-[90%] max-w-md text-center">
       <h2 class="text-2xl font-extrabold mb-2 text-[var(--brand)]">Pagamento R$ 9,90</h2>
@@ -152,20 +149,16 @@
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="py-10 text-center text-sm text-slate-500">
     <p>© <span id="year"></span> SuaMarca. Todos os direitos reservados.</p>
     <a href="#" class="underline">Política de Privacidade</a>
   </footer>
 
   <script>
-    // ===================== CONFIGURÁVEIS =====================
-    const WHATS_NUMBER = '55619998514680'; // 55 + DDD + número
-    const MP_PUBLIC_KEY = 'APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0'; // sua Public Key
-    // endpoint de preferência (enquanto testa no vercel.app)
+    const WHATS_NUMBER = '55619998514680';
+    const MP_PUBLIC_KEY = 'APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0';
     const MP_ENDPOINT = 'https://dieta-self.vercel.app/api/mp-preference';
 
-    // Perfis e conteúdos
     const PROFILES = {
       A: { title: '🥑 Perfil A — Low Carb / Cetogênica', desc: 'Seu corpo tende a responder melhor a baixos carboidratos, priorizando proteínas magras e gorduras boas. Controle açúcar e farinhas refinadas.', tips: ['Priorize ovos, peixes, carnes magras, abacate e azeite','Troque refrigerantes por água com limão','Monitore sódio e ingestão de fibras'], menu: ['Café: omelete com queijo + abacate','Almoço: frango grelhado + salada com azeite','Jantar: salmão + legumes salteados'] },
       B: { title: '🍚 Perfil B — Balanceada / Mediterrânea', desc: 'Seu metabolismo pede equilíbrio entre carboidratos complexos, proteínas e gorduras boas. Foco em alimentos naturais e variedade.', tips: ['Monte pratos coloridos e variados','Prefira grãos integrais e frutas','Inclua azeite e oleaginosas com moderação'], menu: ['Café: iogurte + granola + frutas','Almoço: arroz integral, feijão, filé de peixe e salada','Jantar: sopa de legumes + frango desfiado'] },
@@ -173,7 +166,6 @@
       D: { title: '🕒 Perfil D — Jejum Intermitente / Flexível', desc: 'Você lida bem com janelas de alimentação. Foque em refeições completas e evite exageros nas quebras do jejum.', tips: ['Defina janela (ex.: 16/8) com profissional, se possível','Priorize proteínas e fibras na primeira refeição','Beba água, café sem açúcar e chás no jejum'], menu: ['Primeira refeição: bowl proteico (iogurte grego + nuts)','Segunda: frango + legumes + arroz integral','Terceira (opcional): sopa de legumes + ovos'] }
     };
 
-    // 15 PERGUNTAS
     const QUESTIONS = [
       { q: 'Qual seu principal objetivo agora?', a: ['Emagrecer rápido','Ganhar massa magra','Manter peso e saúde','Reduzir gordura localizada'] },
       { q: 'Seu nível de energia diário é…', a: ['Sempre cansado','Oscila muito','Constante','Muito alto'] },
@@ -192,8 +184,7 @@
       { q: 'Qual frase te representa?', a: ['Quero resultados rápidos','Prefiro algo sustentável','Quero comer bem e perder peso','Quero performance máxima'] }
     ];
 
-    // Estado e pontuação: recomputa a cada escolha (100% consistente ao voltar/trocar)
-    const selected = Array(QUESTIONS.length).fill(null); // A/B/C/D por pergunta
+    const selected = Array(QUESTIONS.length).fill(null);
     const scores = { A:0, B:0, C:0, D:0 };
     let current = 0;
     const form = document.getElementById('quizForm');
@@ -207,12 +198,12 @@
             <div class="mt-3 grid sm:grid-cols-2 gap-3">
               ${item.a.map((opt, i)=>{
                 const letter = String.fromCharCode(65 + i);
-                const id = `q${idx}_${letter}`;
-                return `
+                const id = \`q\${idx}_\${letter}\`;
+                return \`
                   <div class="choice">
-                    <input class="peer hidden" type="radio" id="${id}" name="q${idx}" value="${letter}" required />
-                    <label for="${id}" class="block rounded-xl border border-slate-300 p-3 peer-checked:border-[var(--brand)] peer-checked:bg-emerald-50 cursor-pointer">${opt}</label>
-                  </div>`
+                    <input class="peer hidden" type="radio" id="\${id}" name="q\${idx}" value="\${letter}" required />
+                    <label for="\${id}" class="block rounded-xl border border-slate-300 p-3 peer-checked:border-[var(--brand)] peer-checked:bg-emerald-50 cursor-pointer">\${opt}</label>
+                  </div>\`
               }).join('')}
             </div>
           </fieldset>`
@@ -233,8 +224,8 @@
     }
 
     function gotoStep(n){
-      const curEl = form.querySelector(`.step[data-step="${current}"]`);
-      const nextEl = form.querySelector(`.step[data-step="${n}"]`);
+      const curEl = form.querySelector(\`.step[data-step="\${current}"]\`);
+      const nextEl = form.querySelector(\`.step[data-step="\${n}"]\`);
       if(curEl) curEl.classList.add('hidden');
       if(nextEl) nextEl.classList.remove('hidden');
       current = n;
@@ -246,7 +237,6 @@
         gotoStep(current + 1);
         return;
       }
-      // terminou
       document.getElementById('quiz').classList.add('hidden');
       showResult();
     }
@@ -257,7 +247,6 @@
     }
 
     function showResult(){
-      // perfil com maior pontuação
       const resKey = Object.entries(scores).sort((a,b)=> b[1]-a[1])[0][0];
       const profile = PROFILES[resKey];
       document.getElementById('resultTitle').textContent = profile.title;
@@ -269,7 +258,6 @@
       document.getElementById('pct').textContent = '100%';
     }
 
-    // Avanço automático: ao selecionar alternativa, salva, recalcula e avança
     form.addEventListener('change', (e)=>{
       const input = e.target;
       if(!(input instanceof HTMLElement)) return;
@@ -277,15 +265,13 @@
       const fs = input.closest('fieldset.step');
       if(!fs) return;
       const idx = Number(fs.getAttribute('data-step'));
-      selected[idx] = input.value; // salva escolha
-      recomputeScores(); // garante pontuação correta mesmo ao voltar/trocar
+      selected[idx] = input.value;
+      recomputeScores();
       setTimeout(nextStep, 120);
     });
 
-    // Botão Voltar
     document.getElementById('btnPrev').addEventListener('click', (e)=>{ e.preventDefault(); prevStep(); });
 
-    // === LEAD & PAGAMENTO ===
     function handleLead(e){
       e.preventDefault();
       document.getElementById('leadOk').classList.remove('hidden');
@@ -308,9 +294,7 @@
         .then(async r => { if(!r.ok){ const t=await r.text(); throw new Error('HTTP '+r.status+' '+t); } return r.json(); })
         .then(data => {
           if(!data?.id) throw new Error('Resposta sem id');
-          // Render normal (botão Mercado Pago)
           mp.checkout({ preference: { id: data.id }, render: { container: '#mp-checkout', label: 'Pagar R$ 9,90' } });
-          // Fallback visível
           if(data.init_point){
             const fallback = document.createElement('a');
             fallback.href = data.init_point; fallback.target = '_blank'; fallback.rel = 'noopener';
@@ -337,14 +321,12 @@
       window.open(link, '_blank');
     }
 
-    // Detecta retorno de sucesso via parâmetros de URL
     (function detectarSucesso(){
       const p = new URLSearchParams(location.search);
       const approved = ['approved','success','pagamento_sucesso'].includes(p.get('status')) || p.get('collection_status') === 'approved' || p.get('paid') === '1';
       if(approved){ fecharPopup(); setTimeout(abrirWhatsAppComResultado, 300); }
     })();
 
-    // Init
     renderQuestions();
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
